# DataStructs

./: .gitignore  CMakeLists.txt  README.md
List/: main.c  temp.cpp
List/algorithm/: fourSum.c
List/list/: ADT.c  ArrayList.c  ArrayList.h  linkedstack.h  seqqueue.c
